<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#23e2dddd"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:padding="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <Button
                android:id="@+id/btnResume"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:background="@drawable/blue_button"
                android:textColor="@color/button_pause_textcolor"
                android:textSize="16dp"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic_fast_forward_black_24dp"
                android:text="@string/title_resume" />

            <Button
                android:id="@+id/btnRestart"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:background="@drawable/blue_button"
                android:textColor="@color/button_pause_textcolor"
                android:textSize="16dp"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic_refresh_black_24dp"
                android:text="@string/title_restart" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/btnSelectMarble"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:textColor="@color/button_pause_textcolor"
            android:textSize="16dp"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_color_lens_black_24dp"
            android:background="@drawable/blue_button"
            android:text="@string/title_marble_color" />

        <Button
            android:id="@+id/btnSelectBoard"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:textColor="@color/button_pause_textcolor"
            android:textSize="16dp"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_border_all_black_24dp"
            android:background="@drawable/blue_button"
            android:text="@string/title_select_board" />



        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >


        <Button
            android:id="@+id/btnHelp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10sp"
            android:background="@drawable/blue_button"
            android:text="@string/title_help"
            android:layout_weight="1"
            android:textColor="@color/button_pause_textcolor"
            android:textSize="16dp"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_help_outline_black_24dp"
            android:onClick="showHelp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:textColor="@color/button_pause_textcolor"
            android:textSize="16dp"
            android:textAllCaps="false"
            android:background="@drawable/blue_button"
            android:drawableLeft="@drawable/ic_settings_power_black_24dp"
            android:text="@string/title_exit" />

        </LinearLayout>

        <Button
            android:id="@+id/btnUndo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/blue_button"
            android:visibility="gone"
            android:text="@string/title_undo" />

        <Button
            android:id="@+id/btnCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/blue_button"
            android:onClick="showCredits"
            android:visibility="gone"
            android:text="@string/title_credits" />
    </LinearLayout>

</ScrollView>